# sudoku

./: .clang-format  CMakeLists.txt  generator.cpp  generator.hpp  prints.cpp  prints.hpp  sudoku.cpp  sudoku.hpp  util.cpp  util.hpp  validator.cpp  validator.hpp
